--- a/BudggyUWP/BudggyUWP/BudggyHome.xaml
+++ b/BudggyUWP/BudggyUWP/BudggyHome.xaml
@@ -237,8 +237,9 @@
 
         <RelativePanel Name="BudgetBalRP" Grid.ColumnSpan="2">
             
-            <Rectangle RelativePanel.AlignHorizontalCenterWithPanel="True"
-                        RelativePanel.AlignVerticalCenterWithPanel="True"
+            <Rectangle Name="BudgetRec"
+                       Margin="0,10,0,0"
+                RelativePanel.AlignHorizontalCenterWithPanel="True"                   
                         RelativePanel.AlignRightWith="BalanceSP"
                         RelativePanel.AlignLeftWith="BalanceSP"
                         RelativePanel.AlignBottomWith="ExpSP"
@@ -248,8 +249,16 @@
                    
                      Fill="{StaticResource LightColor}"
                   />
+            <Button Name="ToggleIncBT" RelativePanel.Below="BudgetRec"
+                    RelativePanel.AlignHorizontalCenterWith="BudgetRec"
+                    Margin="0,10,0,0"
+                    FontSize="24"
+                    Content="Add Income"                    
+                    
+                    />
             <StackPanel Name="BalanceSP" Background="{x:Null}"  RelativePanel.AlignHorizontalCenterWithPanel="True"
-                        RelativePanel.AlignVerticalCenterWithPanel="True">
+                        RelativePanel.AlignTopWithPanel="True"
+                        Margin="0,10,0,0">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Budget Balance for" Style="{StaticResource BudgetContainerTBl}" />
                     <TextBlock Name="BudgetMonthTB"  Style="{StaticResource BudgetContainerTBl}"
