--- a/BudggyUWP/BudggyUWP/BudggyHome.xaml
+++ b/BudggyUWP/BudggyUWP/BudggyHome.xaml
@@ -275,8 +275,45 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
-                   
+                    <RowDefinition Height="1*"/>
+
                 </Grid.RowDefinitions>
+
+                <Border                   
+                    Name="BinBD"
+                BorderBrush="{StaticResource LightColor}"
+                Margin="0,10"
+                BorderThickness="6"
+                Padding="0,0,0,0"
+                CornerRadius="3" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"
+                >
+
+                    <ListBox Name="BinLB" 
+                 ScrollViewer.HorizontalScrollMode="Enabled"
+                 ScrollViewer.HorizontalScrollBarVisibility="Visible"
+                 ScrollViewer.IsHorizontalRailEnabled="True" 
+                     Background="{StaticResource LightColor}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Stretch" 
+                  >
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+
+                                <RelativePanel >
+                                    <!-- use a relative panel to have the delete button always on the right!-->
+                                    
+                                    <TextBlock Name="LBBinNameTB" Margin="10,0,0,0" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
+                                   Style="{StaticResource BudggyHomeTBlock}"
+                                   RelativePanel.AlignLeftWithPanel="True"                                 
+                                   />                                  
+                                    <TextBlock Name="IncDateTB" Style="{StaticResource BudggyHomeTBlock}"
+                                   Margin="20,0,0,0"
+                                   Text="{Binding BalanceString, UpdateSourceTrigger=PropertyChanged}"
+                                   RelativePanel.RightOf="LBBinNameTB"
+                                   />
+                                </RelativePanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Border>
 
                 <Border                   
                     Name="IncBD"
@@ -284,18 +321,18 @@
                 Margin="0,10"
                 BorderThickness="6"
                 Padding="0,0,0,0"
-                CornerRadius="3" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                CornerRadius="3" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"
                 >
                     <ListBox Name="IncLB" 
                  ScrollViewer.HorizontalScrollMode="Enabled"
                  ScrollViewer.HorizontalScrollBarVisibility="Visible"
                  ScrollViewer.IsHorizontalRailEnabled="True" 
-                     Background="{StaticResource LightColor}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="556"
+                     Background="{StaticResource LightColor}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Stretch"
                   >
                         <ListBox.ItemTemplate>
                             <DataTemplate>
 
-                                <RelativePanel Width="450" >
+                                <RelativePanel>
                                     <!-- use a relative panel to have the delete button always on the right!-->
                                     <Ellipse Name="IncEllipse" Fill="Green" Width="25" Height="25"
                                  Margin="0,10,0,0"
@@ -336,20 +373,20 @@
                 </Border>
 
                 <Border Name="ExpBD"
-                    Grid.Row="1"
+                    Grid.Row="2"
                 BorderBrush="{StaticResource LightColor}"
                 BorderThickness="6"
                 Margin="0,10"
                 Padding="0,0,0,0"
-                CornerRadius="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                CornerRadius="3" HorizontalAlignment="Center" VerticalAlignment="Center">
 
-                    <ListBox Name="ExpLB" Grid.Row="2" Grid.Column="1"
+                    <ListBox Name="ExpLB"
                  ScrollViewer.HorizontalScrollMode="Enabled"
                  ScrollViewer.HorizontalScrollBarVisibility="Visible"
                  ScrollViewer.IsHorizontalRailEnabled="True" Background="{StaticResource LightColor}">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <RelativePanel Width="450" >
+                                <RelativePanel>
 
                                     <!-- use a relative panel to have the delete button always on the right!-->
                                     <Ellipse Name="ExpEllipse" Fill="Red" Width="25" Height="25"
